--- a/snepi.space/templates/snepi.space.j2
+++ b/snepi.space/templates/snepi.space.j2
@@ -1,6 +1,6 @@
 server {
-        listen 80;
-        listen [::]:80;
+        listen 8080 default_server;
+        listen [::]:8080 default_server;
 
         root /var/www/snepi.space;
 
